--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.116
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Combine editor and translator names only if the
+  editortranslator locale term is defined.
+
+
+==========================
 Changes in version 1.0.115
 ==========================
 
