--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,18 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.119
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Introduce processor option to suppress the transliteration
+  of titles in bibliography and notes.
+
+
+==========================
 Changes in version 1.0.118
 ==========================
 
