--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,17 @@
 Summary of changes to citeproc-js since version 1.0.0 release.
 
 ==========================
+Changes in version 1.0.132
+==========================
+
+------------------------------------
+Mishandled or unimplemented features
+------------------------------------
+
+- Wake up debug tracing in Zotero configuration of the processor.
+
+
+==========================
 Changes in version 1.0.131
 ==========================
 
